@@ -217,6 +217,10 @@ HISTORY
   ++ Bugfixes:
 
   2015-03-21: Simon Goldschmidt
+  * tcp_impl.h, tcp.c, tcp_in.c: fixed bug #41318 (Bad memory ref in tcp_input()
+    after tcp_close())
+
+  2015-03-21: Simon Goldschmidt
   * tcp_in.c: fixed bug #38468 (tcp_sent() not called on half-open connection for
     data ACKed with the same ack as FIN)
 
